<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.submission_1_fundamental_android.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_upcoming2"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_home_to_favoriteFragment"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/navigation_setting" />

    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.submission_1_fundamental_android.ui.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_finished2"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_upcoming_to_favoriteFragment"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_upcoming_to_settingsFragment"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.submission_1_fundamental_android.ui.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >

        <action
            android:id="@+id/action_navigation_finished_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_finished_to_favoriteFragment"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_finished_to_settingsFragment"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.submission_1_fundamental_android.ui.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_favoriteFragment_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_favoriteFragment_to_settingsFragment"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_favoriteFragment_to_navigation_finished"
            app:destination="@id/navigation_finished" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.submission_1_fundamental_android.ui.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_settingsFragment_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
    </fragment>


</navigation>