<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dicoding_event"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="4dp" />

                <TextView
                    android:id="@+id/upcoming_events_label"
                    style="@style/TextSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/upcoming_events"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/tvMoreUp"
                    style="@style/TextSubDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/more"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/upcoming_events_recycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.918"
                    app:layout_constraintStart_toEndOf="@+id/upcoming_events_label" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_events_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upcoming_events_label"
                    app:layout_constraintWidth_percent="1.0"
                    tools:listitem="@layout/upcoming_view" />

                <TextView
                    android:id="@+id/finished_events_label"
                    style="@style/TextSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished_events"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/upcoming_events_label"
                    app:layout_constraintHorizontal_bias="-0.0"
                    app:layout_constraintStart_toStartOf="@+id/upcoming_events_label"
                    app:layout_constraintTop_toBottomOf="@+id/upcoming_events_recycler"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tvMoreFin"
                    style="@style/TextSubDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="More..."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/finished_events_recycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.926"
                    app:layout_constraintStart_toEndOf="@+id/finished_events_label"
                    tools:ignore="HardcodedText" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/finished_events_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/finished_events_label"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/finished_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
